# NewCuda

./: .gitignore  CMakeLists.txt  README.md  monitorGPU.bat  xmake.lua
CUDALearn/: CMakeLists.txt
CUDALearn/headers/: cudaFunctions.h  image.h
CUDALearn/src/: GameLife.cu  atomOptCPU.cu  atomOptGPU.cu  cudaMultiStream.cu  dotMulAtomLock.cu  juila.cu  rayTracing.cu
GrabCUDADocs/: pom.xml
GrabCUDADocs/src/main/java/com/royenheart/grabcuda/: fetchPDF.java
cudaLearn/src/: atomOptCPU.cu  atomOptGPU.cu  bitmap_sharedMem.cu  cudaMultiStreamOverlap.cu  cudaStream.cu  dotMul.cu  getCudaDevProp.cu  heatConductionNoTexture.cu  heatConductionTexture.cu  ioNoPagelockMem.cu  ioPagelockMem.cu  juila.cu
getCUDADocs/src/main/java/com/royenheart/grabcuda/: getPatternValue.java  get_a.java
inc/: block.cuh  image.cuh
src/: GameLife.cu  atomOptCPU.cu  atomOptGPU.cu  bitmap_sharedMem.cu  block.hpp  caustics.cu  cudaMultiStream.cu  cudaMultiStreamOverlap.cu  cudaStream.cu  data.cpp  data.cu  data.hpp  dotMul.cu  dotMulAtomLock.cu  getCudaDevProp.cu  heatConductionNoTexture.cu  heatConductionTexture.cu  image.cpp  image.cu  ioNoPagelockMem.cu  ioPagelockMem.cu  juila.cu  rayTracing.cu  zeroCopyMem.cu
unitTests/: CMakeLists.txt
unitTests/headers/: image.h
unitTests/src/: bitmap_sharedMem.cu  bookTest.cu  easyLogTest.cpp  heatConductionNoTexture.cu  heatConductionTexture.cu  juila.cu  opencvTest.cpp  rayTracing.cu  zeroCopyMem.cu
